--- a/platzi-flask/templates/hello.html
+++ b/platzi-flask/templates/hello.html
@@ -1,1 +1,11 @@
-<h1>Hello World Platzi, tu IP es {{user_id}}</h1>
+{% if user_ip %}
+    <h1>Hello World Platzi, tu IP es {{ user_ip }}</h1>
+{% else %}
+    <a href="{{ url_for('index')}}">Ir a Inicio</a>
+{% endif %}
+
+<ul>
+    {% for todo in todos %}
+        <li>todo</li>
+    {% endfor %}
+</ul>
